clusters/building-blocks/media/apps/jellyfin/app/jellyfin-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      protocol: TCP
      name: pms
