clusters/building-blocks/media/apps/jellyfin/app/jellyfin-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
  labels:
    app: jellyfin
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - kind: Rule
      match: Host(`watch.home.${DOMAIN_NAME}`)
      priority: 10
      middlewares:
        - name: local-ipallowlist
          namespace: edge
      services:
        - kind: Service
          name: jellyfin
          namespace: media
          passHostHeader: true
          port: 8096
          scheme: http
